src/main/java/com/milaboratory/minnn/cli/FilterGrammarParser.java
// Generated from FilterGrammar.g4 by ANTLR 4.7
package com.milaboratory.minnn.cli;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FilterGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SINGLE_QUOTE=1, STRING=2, MIN_GROUP_QUALITY=3, AVG_GROUP_QUALITY=4, GROUP_N_COUNT=5, 
		GROUP_N_FRACTION=6, MIN_CONSENSUS_READS=7, LEN=8, FLOAT_NUMBER=9, INT_NUMBER=10, 
		GROUP_NAME=11, OPEN_PARENTHESIS=12, CLOSED_PARENTHESIS=13, EQUALS=14, 
		TILDE=15, AND=16, OR=17, ASTERISK=18, WS=19;
	public static final int
		RULE_filter = 0, RULE_filterInParentheses = 1, RULE_anySingleFilter = 2, 
		RULE_or = 3, RULE_orOperand = 4, RULE_and = 5, RULE_andOperand = 6, RULE_pattern = 7, 
		RULE_simpleFilter = 8, RULE_minGroupQuality = 9, RULE_avgGroupQuality = 10, 
		RULE_groupNCount = 11, RULE_groupNFraction = 12, RULE_minConsensusReads = 13, 
		RULE_len = 14, RULE_patternString = 15, RULE_minGroupQualityNum = 16, 
		RULE_avgGroupQualityNum = 17, RULE_groupNCountNum = 18, RULE_groupNFractionNum = 19, 
		RULE_minConsensusReadsNum = 20, RULE_groupName = 21, RULE_groupNameOrAll = 22, 
		RULE_groupLength = 23;
	public static final String[] ruleNames = {
		"filter", "filterInParentheses", "anySingleFilter", "or", "orOperand", 
		"and", "andOperand", "pattern", "simpleFilter", "minGroupQuality", "avgGroupQuality", 
		"groupNCount", "groupNFraction", "minConsensusReads", "len", "patternString", 
		"minGroupQualityNum", "avgGroupQualityNum", "groupNCountNum", "groupNFractionNum", 
		"minConsensusReadsNum", "groupName", "groupNameOrAll", "groupLength"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'''", null, "'MinGroupQuality'", "'AvgGroupQuality'", "'GroupMaxNCount'", 
		"'GroupMaxNFraction'", "'MinConsensusReads'", "'Len'", null, null, null, 
		"'('", "')'", "'='", "'~'", "'&'", "'|'", "'*'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SINGLE_QUOTE", "STRING", "MIN_GROUP_QUALITY", "AVG_GROUP_QUALITY", 
		"GROUP_N_COUNT", "GROUP_N_FRACTION", "MIN_CONSENSUS_READS", "LEN", "FLOAT_NUMBER", 
		"INT_NUMBER", "GROUP_NAME", "OPEN_PARENTHESIS", "CLOSED_PARENTHESIS", 
		"EQUALS", "TILDE", "AND", "OR", "ASTERISK", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FilterGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FilterGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FilterContext extends ParserRuleContext {
		public FilterInParenthesesContext filterInParentheses() {
			return getRuleContext(FilterInParenthesesContext.class,0);
		}
		public AnySingleFilterContext anySingleFilter() {
			return getRuleContext(AnySingleFilterContext.class,0);
		}
		public FilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).enterFilter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).exitFilter(this);
		}
	}

	public final FilterContext filter() throws RecognitionException {
		FilterContext _localctx = new FilterContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_filter);
		try {
			setState(50);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				filterInParentheses();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				anySingleFilter();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterInParenthesesContext extends ParserRuleContext {
		public TerminalNode OPEN_PARENTHESIS() { return getToken(FilterGrammarParser.OPEN_PARENTHESIS, 0); }
		public AnySingleFilterContext anySingleFilter() {
			return getRuleContext(AnySingleFilterContext.class,0);
		}
		public TerminalNode CLOSED_PARENTHESIS() { return getToken(FilterGrammarParser.CLOSED_PARENTHESIS, 0); }
		public FilterInParenthesesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_filterInParentheses; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).enterFilterInParentheses(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).exitFilterInParentheses(this);
		}
	}

	public final FilterInParenthesesContext filterInParentheses() throws RecognitionException {
		FilterInParenthesesContext _localctx = new FilterInParenthesesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_filterInParentheses);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(OPEN_PARENTHESIS);
			setState(53);
			anySingleFilter();
			setState(54);
			match(CLOSED_PARENTHESIS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnySingleFilterContext extends ParserRuleContext {
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public SimpleFilterContext simpleFilter() {
			return getRuleContext(SimpleFilterContext.class,0);
		}
		public AnySingleFilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_anySingleFilter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).enterAnySingleFilter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).exitAnySingleFilter(this);
		}
	}

	public final AnySingleFilterContext anySingleFilter() throws RecognitionException {
		AnySingleFilterContext _localctx = new AnySingleFilterContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_anySingleFilter);
		try {
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				or();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				and();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				pattern();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				simpleFilter();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrContext extends ParserRuleContext {
		public List<OrOperandContext> orOperand() {
			return getRuleContexts(OrOperandContext.class);
		}
		public OrOperandContext orOperand(int i) {
			return getRuleContext(OrOperandContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(FilterGrammarParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(FilterGrammarParser.OR, i);
		}
		public OrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_or; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).enterOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).exitOr(this);
		}
	}

	public final OrContext or() throws RecognitionException {
		OrContext _localctx = new OrContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_or);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			orOperand();
			setState(63);
			match(OR);
			setState(64);
			orOperand();
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(65);
				match(OR);
				setState(66);
				orOperand();
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrOperandContext extends ParserRuleContext {
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public SimpleFilterContext simpleFilter() {
			return getRuleContext(SimpleFilterContext.class,0);
		}
		public FilterInParenthesesContext filterInParentheses() {
			return getRuleContext(FilterInParenthesesContext.class,0);
		}
		public OrOperandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orOperand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).enterOrOperand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).exitOrOperand(this);
		}
	}

	public final OrOperandContext orOperand() throws RecognitionException {
		OrOperandContext _localctx = new OrOperandContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_orOperand);
		try {
			setState(76);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				and();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				pattern();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				simpleFilter();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				filterInParentheses();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndContext extends ParserRuleContext {
		public List<AndOperandContext> andOperand() {
			return getRuleContexts(AndOperandContext.class);
		}
		public AndOperandContext andOperand(int i) {
			return getRuleContext(AndOperandContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(FilterGrammarParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(FilterGrammarParser.AND, i);
		}
		public AndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_and; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).enterAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).exitAnd(this);
		}
	}

	public final AndContext and() throws RecognitionException {
		AndContext _localctx = new AndContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_and);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			andOperand();
			setState(79);
			match(AND);
			setState(80);
			andOperand();
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(81);
				match(AND);
				setState(82);
				andOperand();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndOperandContext extends ParserRuleContext {
		public PatternContext pattern() {
			return getRuleContext(PatternContext.class,0);
		}
		public SimpleFilterContext simpleFilter() {
			return getRuleContext(SimpleFilterContext.class,0);
		}
		public FilterInParenthesesContext filterInParentheses() {
			return getRuleContext(FilterInParenthesesContext.class,0);
		}
		public AndOperandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andOperand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).enterAndOperand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).exitAndOperand(this);
		}
	}

	public final AndOperandContext andOperand() throws RecognitionException {
		AndOperandContext _localctx = new AndOperandContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_andOperand);
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GROUP_NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(88);
				pattern();
				}
				break;
			case MIN_GROUP_QUALITY:
			case AVG_GROUP_QUALITY:
			case GROUP_N_COUNT:
			case GROUP_N_FRACTION:
			case MIN_CONSENSUS_READS:
			case LEN:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				simpleFilter();
				}
				break;
			case OPEN_PARENTHESIS:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				filterInParentheses();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PatternContext extends ParserRuleContext {
		public GroupNameContext groupName() {
			return getRuleContext(GroupNameContext.class,0);
		}
		public TerminalNode TILDE() { return getToken(FilterGrammarParser.TILDE, 0); }
		public PatternStringContext patternString() {
			return getRuleContext(PatternStringContext.class,0);
		}
		public PatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pattern; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).enterPattern(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).exitPattern(this);
		}
	}

	public final PatternContext pattern() throws RecognitionException {
		PatternContext _localctx = new PatternContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pattern);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			groupName();
			setState(94);
			match(TILDE);
			setState(95);
			patternString();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleFilterContext extends ParserRuleContext {
		public MinGroupQualityContext minGroupQuality() {
			return getRuleContext(MinGroupQualityContext.class,0);
		}
		public AvgGroupQualityContext avgGroupQuality() {
			return getRuleContext(AvgGroupQualityContext.class,0);
		}
		public GroupNCountContext groupNCount() {
			return getRuleContext(GroupNCountContext.class,0);
		}
		public GroupNFractionContext groupNFraction() {
			return getRuleContext(GroupNFractionContext.class,0);
		}
		public MinConsensusReadsContext minConsensusReads() {
			return getRuleContext(MinConsensusReadsContext.class,0);
		}
		public LenContext len() {
			return getRuleContext(LenContext.class,0);
		}
		public SimpleFilterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleFilter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).enterSimpleFilter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).exitSimpleFilter(this);
		}
	}

	public final SimpleFilterContext simpleFilter() throws RecognitionException {
		SimpleFilterContext _localctx = new SimpleFilterContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_simpleFilter);
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MIN_GROUP_QUALITY:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				minGroupQuality();
				}
				break;
			case AVG_GROUP_QUALITY:
				enterOuterAlt(_localctx, 2);
				{
				setState(98);
				avgGroupQuality();
				}
				break;
			case GROUP_N_COUNT:
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				groupNCount();
				}
				break;
			case GROUP_N_FRACTION:
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				groupNFraction();
				}
				break;
			case MIN_CONSENSUS_READS:
				enterOuterAlt(_localctx, 5);
				{
				setState(101);
				minConsensusReads();
				}
				break;
			case LEN:
				enterOuterAlt(_localctx, 6);
				{
				setState(102);
				len();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MinGroupQualityContext extends ParserRuleContext {
		public TerminalNode MIN_GROUP_QUALITY() { return getToken(FilterGrammarParser.MIN_GROUP_QUALITY, 0); }
		public TerminalNode OPEN_PARENTHESIS() { return getToken(FilterGrammarParser.OPEN_PARENTHESIS, 0); }
		public GroupNameOrAllContext groupNameOrAll() {
			return getRuleContext(GroupNameOrAllContext.class,0);
		}
		public TerminalNode CLOSED_PARENTHESIS() { return getToken(FilterGrammarParser.CLOSED_PARENTHESIS, 0); }
		public TerminalNode EQUALS() { return getToken(FilterGrammarParser.EQUALS, 0); }
		public MinGroupQualityNumContext minGroupQualityNum() {
			return getRuleContext(MinGroupQualityNumContext.class,0);
		}
		public MinGroupQualityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_minGroupQuality; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).enterMinGroupQuality(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).exitMinGroupQuality(this);
		}
	}

	public final MinGroupQualityContext minGroupQuality() throws RecognitionException {
		MinGroupQualityContext _localctx = new MinGroupQualityContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_minGroupQuality);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(MIN_GROUP_QUALITY);
			setState(106);
			match(OPEN_PARENTHESIS);
			setState(107);
			groupNameOrAll();
			setState(108);
			match(CLOSED_PARENTHESIS);
			setState(109);
			match(EQUALS);
			setState(110);
			minGroupQualityNum();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AvgGroupQualityContext extends ParserRuleContext {
		public TerminalNode AVG_GROUP_QUALITY() { return getToken(FilterGrammarParser.AVG_GROUP_QUALITY, 0); }
		public TerminalNode OPEN_PARENTHESIS() { return getToken(FilterGrammarParser.OPEN_PARENTHESIS, 0); }
		public GroupNameOrAllContext groupNameOrAll() {
			return getRuleContext(GroupNameOrAllContext.class,0);
		}
		public TerminalNode CLOSED_PARENTHESIS() { return getToken(FilterGrammarParser.CLOSED_PARENTHESIS, 0); }
		public TerminalNode EQUALS() { return getToken(FilterGrammarParser.EQUALS, 0); }
		public AvgGroupQualityNumContext avgGroupQualityNum() {
			return getRuleContext(AvgGroupQualityNumContext.class,0);
		}
		public AvgGroupQualityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_avgGroupQuality; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).enterAvgGroupQuality(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).exitAvgGroupQuality(this);
		}
	}

	public final AvgGroupQualityContext avgGroupQuality() throws RecognitionException {
		AvgGroupQualityContext _localctx = new AvgGroupQualityContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_avgGroupQuality);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(AVG_GROUP_QUALITY);
			setState(113);
			match(OPEN_PARENTHESIS);
			setState(114);
			groupNameOrAll();
			setState(115);
			match(CLOSED_PARENTHESIS);
			setState(116);
			match(EQUALS);
			setState(117);
			avgGroupQualityNum();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroupNCountContext extends ParserRuleContext {
		public TerminalNode GROUP_N_COUNT() { return getToken(FilterGrammarParser.GROUP_N_COUNT, 0); }
		public TerminalNode OPEN_PARENTHESIS() { return getToken(FilterGrammarParser.OPEN_PARENTHESIS, 0); }
		public GroupNameOrAllContext groupNameOrAll() {
			return getRuleContext(GroupNameOrAllContext.class,0);
		}
		public TerminalNode CLOSED_PARENTHESIS() { return getToken(FilterGrammarParser.CLOSED_PARENTHESIS, 0); }
		public TerminalNode EQUALS() { return getToken(FilterGrammarParser.EQUALS, 0); }
		public GroupNCountNumContext groupNCountNum() {
			return getRuleContext(GroupNCountNumContext.class,0);
		}
		public GroupNCountContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupNCount; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).enterGroupNCount(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).exitGroupNCount(this);
		}
	}

	public final GroupNCountContext groupNCount() throws RecognitionException {
		GroupNCountContext _localctx = new GroupNCountContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_groupNCount);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(GROUP_N_COUNT);
			setState(120);
			match(OPEN_PARENTHESIS);
			setState(121);
			groupNameOrAll();
			setState(122);
			match(CLOSED_PARENTHESIS);
			setState(123);
			match(EQUALS);
			setState(124);
			groupNCountNum();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroupNFractionContext extends ParserRuleContext {
		public TerminalNode GROUP_N_FRACTION() { return getToken(FilterGrammarParser.GROUP_N_FRACTION, 0); }
		public TerminalNode OPEN_PARENTHESIS() { return getToken(FilterGrammarParser.OPEN_PARENTHESIS, 0); }
		public GroupNameOrAllContext groupNameOrAll() {
			return getRuleContext(GroupNameOrAllContext.class,0);
		}
		public TerminalNode CLOSED_PARENTHESIS() { return getToken(FilterGrammarParser.CLOSED_PARENTHESIS, 0); }
		public TerminalNode EQUALS() { return getToken(FilterGrammarParser.EQUALS, 0); }
		public GroupNFractionNumContext groupNFractionNum() {
			return getRuleContext(GroupNFractionNumContext.class,0);
		}
		public GroupNFractionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupNFraction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).enterGroupNFraction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).exitGroupNFraction(this);
		}
	}

	public final GroupNFractionContext groupNFraction() throws RecognitionException {
		GroupNFractionContext _localctx = new GroupNFractionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_groupNFraction);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(GROUP_N_FRACTION);
			setState(127);
			match(OPEN_PARENTHESIS);
			setState(128);
			groupNameOrAll();
			setState(129);
			match(CLOSED_PARENTHESIS);
			setState(130);
			match(EQUALS);
			setState(131);
			groupNFractionNum();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MinConsensusReadsContext extends ParserRuleContext {
		public TerminalNode MIN_CONSENSUS_READS() { return getToken(FilterGrammarParser.MIN_CONSENSUS_READS, 0); }
		public TerminalNode EQUALS() { return getToken(FilterGrammarParser.EQUALS, 0); }
		public MinConsensusReadsNumContext minConsensusReadsNum() {
			return getRuleContext(MinConsensusReadsNumContext.class,0);
		}
		public MinConsensusReadsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_minConsensusReads; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).enterMinConsensusReads(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FilterGrammarListener ) ((FilterGrammarListener)listener).exitMinConsensusReads(this);
		}
	}
